--- a/app/views/layouts/_repeat.html.haml
+++ b/app/views/layouts/_repeat.html.haml
@@ -8,7 +8,7 @@
     %ul.right.hide-on-med-and-down
       %li
         %a{href: ""}
-          %i.material-icons ログインすっぺ
+          %i.material-icons person_add 登録
       %li
         %a{href: ""}
           %i.material-icons 登録すっぺ
@@ -18,7 +18,17 @@
       %li
         %a{href: ""}
           %i.material-icons 田舎さ帰るだ
+        .switch
+          %label
+            %input{type: "checkbox"}ぴか
+            %span.lever
+            %span ぴかぴか
+
 .icono-smile
 %h3 English あいうえお
 %h4 aaaa あいうえお
 %h5 日本語フォント
+%i.material-icons mood
+
+
+
