--- a/app/views/layouts/_repeat.html.haml
+++ b/app/views/layouts/_repeat.html.haml
@@ -8,27 +8,18 @@
     %ul.right.hide-on-med-and-down
       %li
         %a{href: ""}
-          %i.material-icons person_add 登録
+          %i.material-icons extension LOGIN
       %li
         %a{href: ""}
-          %i.material-icons 登録すっぺ
+          %i.material-icons person_add 登  録
       %li
         %a{href: ""}
-          %i.material-icons 東京さ行ぐだ
+          %i.material-icons edit 投  稿
       %li
         %a{href: ""}
-          %i.material-icons 田舎さ帰るだ
+          %i.material-icons loop 更  新
         .switch
           %label
             %input{type: "checkbox"}ぴか
             %span.lever
             %span ぴかぴか
-
-.icono-smile
-%h3 English あいうえお
-%h4 aaaa あいうえお
-%h5 日本語フォント
-%i.material-icons mood
-
-
-
