--- a/app/views/layouts/_repeat.html.haml
+++ b/app/views/layouts/_repeat.html.haml
@@ -18,8 +18,9 @@
       %li
         %a{href: ""}
           %i.material-icons loop 更  新
-        .switch
-          %label
-            %input{type: "checkbox"}ぴか
-            %span.lever
-            %span ぴかぴか
+  .switch
+    %label
+      %span.switch_left なんとか
+      %input{type: "checkbox"}
+      %span.lever
+      %span.switch_right かんとか
