--- a/app/assets/stylesheets/config/_font.scss
+++ b/app/assets/stylesheets/config/_font.scss
@@ -1,10 +1,12 @@
 [class*="icono-"]{
-  color:gray;
+  color:white;
 }
 
 h3{font-family: 'Alegreya', serif;
+  color:white;
 }
 
-h4,h5{
+h4,h5,li{
   font-family: 'Sawarabi Mincho', sans-serif;
+  color:white;
 }
