--- a/app/assets/stylesheets/modules/_contents.scss
+++ b/app/assets/stylesheets/modules/_contents.scss
@@ -1,6 +1,6 @@
 .wrapper{
   .content{
-    background-color: #405050;
+    background: rgba(black, .4);
     border-radius: 10px;
     color: white;
     padding:10px 100px 10px;
