バージョン1

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,24 @@
 @import "mixin/mixin";
 @import "modules/header";
 @import "modules/contents";
+@import "modules/blog_new";
 
 body{
   min-width:100vw;
   min-height:100vh;
   @include bg-gradient;
 }
+
+footer {
+  @include boxBase;
+  color: white;
+  position: fixed;
+  bottom: 0;
+}
+
+h4.page_title,h5.page_title{
+  border-bottom:thin solid white;
+  width:80vw;
+  margin-left: 3vw;
+}
+
