--- a/app/views/blogs/index.html.haml
+++ b/app/views/blogs/index.html.haml
@@ -1,26 +1,1 @@
-.wrapper
-  .content
-    %ul
-      %li.content--blog__title タイトル
-      .content--blog__text てきすと
-      %li.content--blog__date 00/00 00:00
-      %li.content--blog__name name: なまえ
-  .content
-    %ul
-      %li.content--blog__title タイトル
-      .content--blog__text てきすと
-      %li.content--blog__date 00/00 00:00
-      %li.content--blog__name name: なまえ
-  .content
-    %ul
-      %li.content--blog__title タイトル
-      .content--blog__text てきすと
-      %li.content--blog__date 00/00 00:00
-      %li.content--blog__name name: なまえ
-  .material-icons palette
-  .material-icons send 新規投稿
-  .material-icons person マイページ
-  %h3 English あいうえお
-  %h4 aaaa あいうえお
-  %h5 日本語フォント
-
+= render 'shared/blogs'
