--- a/app/assets/stylesheets/mixin/_mixin.scss
+++ b/app/assets/stylesheets/mixin/_mixin.scss
@@ -6,6 +6,11 @@
   }
 }
 
-@mixin bg-gradient($angle: 180deg, $color: #008040, $amount: 45%) {
+@mixin bg-gradient($angle: 180deg, $color: #008040, $amount: 60%) {
   background: linear-gradient($angle, $color, adjust-hue($color, $amount)) fixed;
+}
+
+@mixin boxBase($margin: 30px auto 0, $padding: 10px) {
+  margin: $margin;
+  padding: $padding;
 }
