バージョン1.6

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,9 @@ footer {
   color: white;
   position: fixed;
   bottom: 0;
+  text-align: center;
+  width:100vw;
+  background:#00695c;
 }
 
 h4.page_title,h5.page_title{
