--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
+<dev class="content_row">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <dev class="content">
     <div class="field">
         <%= f.label :name %> <em>(6 characters maximum)</em><br />
         <%= f.text_field :name, autofocus: true, maxlength: "6" %>
@@ -29,7 +29,8 @@
     <div class="actions">
       <%= f.submit "Sign up" %>
     </div>
-  </dev>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
