--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
-<dev class="content_row">
-<h2>Sign up</h2>
 
+<h3>Sign up</h3>
+
+<dev class="content_row">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -27,10 +28,9 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Sign up",class:"btn" %>
     </div>
-
 <% end %>
 
 <%= render "devise/shared/links" %>
-</div>
+</dev>
