--- a/app/assets/stylesheets/modules/_contents.scss
+++ b/app/assets/stylesheets/modules/_contents.scss
@@ -28,7 +28,7 @@
     }
     a.edit-btn{
       float:right;
-      color:white;
+      color:$white;
       margin-right: 5px;
       padding: 0 5px;
       border-radius: 5px;
