--- a/app/assets/stylesheets/modules/_blog_new.scss
+++ b/app/assets/stylesheets/modules/_blog_new.scss
@@ -11,7 +11,7 @@
       min-height:300px;
       width:100%;
       border: none;
-      background: rgba(gray, .7);
+      background: rgba($gray, .7);
     }
   }
 }
@@ -20,7 +20,7 @@
   font-size: 12px;
   padding:5px;
   border-radius: 8px;
-  background: rgba(gray, .7);
+  background: rgba($gray, .7);
   border: none;
   font-size:18px;
 }
