--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,10 +1,10 @@
 .switch{
   float:right;
   .switch_left{
-    color: white;
+    color: $white;
   }
   .switch_right{
-    color: white;
+    color: $white;
     padding-right: 30px;
   }
 }
